@@ -6,25 +6,17 @@ class RemotePayflowTest < Test::Unit::TestCase
 
     @gateway = PayflowGateway.new(fixtures(:payflow))
     
-    @creditcard = credit_card('5105105105105100',
+    @credit_card = credit_card('5105105105105100',
       :type => 'master'
     )
 
-    @options = { :address => { 
-                    :name => 'Cody Fauser',
-                    :address1 => '1234 Shady Brook Lane',
-                    :city => 'Ottawa',
-                    :state => 'ON',
-                    :country => 'CA',
-                    :zip => '90210',
-                    :phone => '555-555-5555'
-               },
+    @options = { :billing_address => address,
                  :email => 'cody@example.com'
                }
   end
   
   def test_successful_purchase
-    assert response = @gateway.purchase(100000, @creditcard, @options)
+    assert response = @gateway.purchase(100000, @credit_card, @options)
     assert_equal "Approved", response.message
     assert_success response
     assert response.test?
@@ -32,14 +24,14 @@ class RemotePayflowTest < Test::Unit::TestCase
   end
   
   def test_declined_purchase
-    assert response = @gateway.purchase(210000, @creditcard, @options)
+    assert response = @gateway.purchase(210000, @credit_card, @options)
     assert_equal 'Declined', response.message
     assert_failure response
     assert response.test?
   end
   
   def test_successful_authorization
-    assert response = @gateway.authorize(100, @creditcard, @options)
+    assert response = @gateway.authorize(100, @credit_card, @options)
     assert_equal "Approved", response.message
     assert_success response
     assert response.test?
@@ -47,7 +39,7 @@ class RemotePayflowTest < Test::Unit::TestCase
   end
 
   def test_authorize_and_capture
-    assert auth = @gateway.authorize(100, @creditcard, @options)
+    assert auth = @gateway.authorize(100, @credit_card, @options)
     assert_success auth
     assert_equal 'Approved', auth.message
     assert auth.authorization
@@ -56,7 +48,7 @@ class RemotePayflowTest < Test::Unit::TestCase
   end
   
   def test_authorize_and_partial_capture
-    assert auth = @gateway.authorize(100 * 2, @creditcard, @options)
+    assert auth = @gateway.authorize(100 * 2, @credit_card, @options)
     assert_success auth
     assert_equal 'Approved', auth.message
     assert auth.authorization
@@ -72,7 +64,7 @@ class RemotePayflowTest < Test::Unit::TestCase
   end
   
   def test_authorize_and_void
-    assert auth = @gateway.authorize(100, @creditcard, @options)
+    assert auth = @gateway.authorize(100, @credit_card, @options)
     assert_success auth
     assert_equal 'Approved', auth.message
     assert auth.authorization
@@ -85,7 +77,7 @@ class RemotePayflowTest < Test::Unit::TestCase
       :login => '',
       :password => ''
     )
-    assert response = gateway.purchase(100, @creditcard, @options)
+    assert response = gateway.purchase(100, @credit_card, @options)
     assert_equal 'Invalid vendor account', response.message
     assert_failure response
   end
@@ -94,24 +86,24 @@ class RemotePayflowTest < Test::Unit::TestCase
     request_id = Digest::MD5.hexdigest(rand.to_s)
     @gateway.expects(:generate_unique_id).times(2).returns(request_id)
     
-    response1 = @gateway.purchase(100, @creditcard, @options)
+    response1 = @gateway.purchase(100, @credit_card, @options)
     assert  response1.success?
     assert_nil response1.params['duplicate']
     
-    response2 = @gateway.purchase(100, @creditcard, @options)
+    response2 = @gateway.purchase(100, @credit_card, @options)
     assert response2.success?
     assert response2.params['duplicate']
   end
   
   def test_create_recurring_profile
-    response = @gateway.recurring(1000, @creditcard, :periodicity => :monthly)
+    response = @gateway.recurring(1000, @credit_card, :periodicity => :monthly)
     assert_success response
     assert !response.params['profile_id'].blank?
     assert response.test?
   end
   
   def test_create_recurring_profile_with_invalid_date
-    response = @gateway.recurring(1000, @creditcard, :periodicity => :monthly, :starting_at => Time.now)
+    response = @gateway.recurring(1000, @credit_card, :periodicity => :monthly, :starting_at => Time.now)
     assert_failure response
     assert_equal 'Field format error: Start or next payment date must be a valid future date', response.message
     assert response.params['profile_id'].blank?
@@ -119,7 +111,7 @@ class RemotePayflowTest < Test::Unit::TestCase
   end
   
   def test_create_and_cancel_recurring_profile
-    response = @gateway.recurring(1000, @creditcard, :periodicity => :monthly)
+    response = @gateway.recurring(1000, @credit_card, :periodicity => :monthly)
     assert_success response
     assert !response.params['profile_id'].blank?
     assert response.test?
@@ -137,7 +129,7 @@ class RemotePayflowTest < Test::Unit::TestCase
       :starting_at => Time.now + 1.day,
       :comment => "Test Profile"
     )
-    response = @gateway.recurring(100, @creditcard, @options)
+    response = @gateway.recurring(100, @credit_card, @options)
     assert_equal "Approved", response.params['message']
     assert_equal "0", response.params['result']
     assert_success response
@@ -152,7 +144,7 @@ class RemotePayflowTest < Test::Unit::TestCase
       :payments => '4',
       :profile_id => @recurring_profile_id
     )
-    response = @gateway.recurring(400, @creditcard, @options)
+    response = @gateway.recurring(400, @credit_card, @options)
     assert_equal "Approved", response.params['message']
     assert_equal "0", response.params['result']
     assert_success response
@@ -174,7 +166,7 @@ class RemotePayflowTest < Test::Unit::TestCase
   
   # Note that this test will only work if you enable reference transactions!!
   def test_reference_purchase
-    assert response = @gateway.purchase(10000, @creditcard, @options)
+    assert response = @gateway.purchase(10000, @credit_card, @options)
     assert_equal "Approved", response.message
     assert_success response
     assert response.test?
@@ -188,7 +180,7 @@ class RemotePayflowTest < Test::Unit::TestCase
   end
   
   def test_recurring_with_initial_authorization
-    response = @gateway.recurring(1000, @creditcard, 
+    response = @gateway.recurring(1000, @credit_card, 
       :periodicity => :monthly,
       :initial_transaction => {
         :type => :authorization
@@ -201,7 +193,7 @@ class RemotePayflowTest < Test::Unit::TestCase
   end
   
   def test_recurring_with_initial_authorization
-    response = @gateway.recurring(1000, @creditcard, 
+    response = @gateway.recurring(1000, @credit_card, 
       :periodicity => :monthly,
       :initial_transaction => {
         :type => :purchase,
@@ -217,7 +209,7 @@ class RemotePayflowTest < Test::Unit::TestCase
   def test_purchase_and_referenced_credit
     amount = 100
     
-    assert purchase = @gateway.purchase(amount, @creditcard, @options)
+    assert purchase = @gateway.purchase(amount, @credit_card, @options)
     assert_success purchase
     assert_equal 'Approved', purchase.message
     assert !purchase.authorization.blank?
@@ -232,7 +224,7 @@ class RemotePayflowTest < Test::Unit::TestCase
   # Non-referenced credits will fail with Result code 117 (failed the security 
   # check) unless Allow non-referenced credits = Yes in PayPal manager
   def test_purchase_and_non_referenced_credit
-    assert credit = @gateway.credit(100, @creditcard, @options)
+    assert credit = @gateway.credit(100, @credit_card, @options)
     assert_success credit
   end
 end
