@@ -6,46 +6,8 @@ class PayflowUkTest < Test::Unit::TestCase
       :login => 'LOGIN',
       :password => 'PASSWORD'
     )
-
-    @creditcard = CreditCard.new(
-      :number => '4242424242424242',
-      :month => 8,
-      :year => 2008,
-      :first_name => 'Longbob',
-      :last_name => 'Longsen'
-    )
-
-    @address = { :address1 => '1234 My Street',
-                 :address2 => 'Apt 1',
-                 :company => 'Widgets Inc',
-                 :city => 'Ottawa',
-                 :state => 'ON',
-                 :zip => 'K1C2N6',
-                 :country => 'Canada',
-                 :phone => '(555)555-5555'
-               }
-  end
-  
-  def test_successful_request
-    @creditcard.number = 1
-    assert response = @gateway.purchase(100, @creditcard, {})
-    assert_success response
-    assert_equal '5555', response.authorization
-    assert response.test?
   end
 
-  def test_unsuccessful_request
-    @creditcard.number = 2
-    assert response = @gateway.purchase(100, @creditcard, {})
-    assert_failure response
-    assert response.test?
-  end
-
-  def test_request_error
-    @creditcard.number = 3
-    assert_raise(Error){ @gateway.purchase(100, @creditcard, {}) }
-  end
-  
   def test_default_currency
     assert_equal 'GBP', PayflowUkGateway.default_currency
   end
